Added functionality to remove properties from cart, modified buy or rent dialog

--- a/src/app/common/dialog/dialog-buy-or-rent/dialog-buy-or-rent.component.html
+++ b/src/app/common/dialog/dialog-buy-or-rent/dialog-buy-or-rent.component.html
@@ -9,5 +9,5 @@
 </div>
 <div mat-dialog-actions>
   <button mat-button (click)="onCancel()">Cancel</button>
-  <button mat-button (click)="onConfirm()">Confirm</button>
+  <button mat-button (click)="onConfirm()" [disabled]="!selected">Confirm</button>
 </div>
